--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ openpyxl = "^3.1.5"
 ipython = "^8.27.0"
 pytest = "^8.3.3"
 pytest-env = "^1.1.5"
+coverage = "^7.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
