--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ipython = "^8.27.0"
 pytest = "^8.3.3"
 pytest-env = "^1.1.5"
 coverage = "^7.6.1"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -22,3 +23,10 @@ ipykernel = "^6.29.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q --cov=excel --cov-report html"
+testpaths = [
+    "tests",
+]
